# FAQ_bot

./: .env.development  .env.production  .gitattributes  .gitignore  ARCHITECTURE.md  Clean.bat  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  Dockerfile  ENHANCED_GUI_DOCUMENTATION.md  ENHANCED_GUI_SUMMARY.md  FAQ_downloader.bat  LICENSE  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_EN.md  UNIVERSAL_FAQ_LOADER_SUMMARY.md  Universal_FAQ_Loader.bat  __init__.py  docker-compose.yml  pyproject.toml  readme.txt  requirements.txt  restart_bot_clean.py  run_bot.py  setup.bat  start.bat  test_enhanced_gui.py  test_modern_gui.py  РУКОВОДСТВО_ПОЛЬЗОВАТЕЛЯ.md
.github/workflows/: ci-cd.yml
backups/: config_pre_rosbert.py  faq_backup_20250826_214729.json
csharp_solution/: ALGORITHM_FIXES.md  Architecture_Design.md  DATA_LOADING_FIXES.md  FINAL_INTEGRATION_SUMMARY.md  FIXES_SUMMARY.md  INTEGRATION_FIXES.md  PROJECT_SUMMARY.md  README.md  TODO_COMPLETION.md  TestDataLoading.cs  TestProgram.cs  UniversalFAQLoader.csproj  UniversalFAQLoader.sln  VerificationTest.cs  VerificationTest.csproj
csharp_solution/Business/: DependencyAnalyzer.cs  FAQAlgorithmService.cs  IFAQAlgorithm.cs  ResponseOptimizer.cs  SmartLinker.cs
csharp_solution/Data/: HybridFAQRepository.cs  IFAQRepository.cs  JsonFAQRepository.cs  SqliteFAQRepository.cs
csharp_solution/Presentation/Controls/: FAQGraphVisualization.xaml.cs
csharp_solution/Presentation/Views/: MainWindow.xaml.cs
data/: faq.json
deployment/: deploy.sh  faq-bot.service
docs/: ARCHITECTURAL_REVIEW_REPORT.md  BULK_LOADER_SETUP.md  CSharp_Migration_Analysis.md  EMBEDDING_MODEL_ANALYSIS.md  IMPROVED_DOCUMENTATION.md  LANGUAGE_MIGRATION_ANALYSIS.md  MODERN_FAQ_SYSTEM_SUMMARY.md  RU_EN_ROSBERT_UPGRADE_REPORT.md  SUPPORTED_FORMATS.md  TECH_LEAD_REVIEW.md  readme.txt  requirements.txt  text_list_test.txt
faq_bot/: 0_Setup.bat  1_Start_Bot.bat  2_Stop_bot.bat  3_Clean_All.bat  README.md  pyproject.toml  requirements.txt  run_bot.py  setup.py  start_bot.py
faq_bot/data/: faq.json
faq_bot/files/: UniSafe презентация продукта.pptx  Заявление ВСК.docx  Заявление о СС_ВСК.xlsx  Подбор ПО UniSafe под карту Galax UP.xlsx  Подтверждение_присутствия_представителя_Ромир_в_магазине_.docx
faq_bot/src/: auth_middleware.py  config.py  database.py  faq_loader.py  handlers.py  main.py  performance_manager.py  test_import.py
faq_bot/templates/: simple_faq_template.csv  simple_faq_template.txt
faq_bot/tests/: conftest.py  run_all_tests.py  test_bot_handlers.py  test_bot_startup.py  test_faq_loading.py  test_faq_search.py
faq_loader/: Program.cs  README.md  UniversalFAQLoader.sln  start_loader.bat
faq_loader/Business/: FAQModels.cs  SemanticGrouper.cs
faq_loader/Presentation/Controls/: FAQGraphVisualization.xaml
files/: Заявление о СС_Альфа.docx
monitoring/: prometheus.yml
scripts/: 1_clean_all.bat  2_start_bot.bat  3_bulk_loader.bat  4_load_files.bat  clear_cache.bat  create_shortcut.bat  deploy.bat  reset_db.bat  restart_bot.bat  setup.bat  update_bot.bat  upgrade_embeddings.bat  validate_config.py
src/: auth_middleware.py  database.py  faq_loader.py  handlers.py  main.py  middlewares.py  security_middleware.py
templates/: faq_template.txt  faq_template.xlsx
test_bulk_files/forms/: forms_1.txt  forms_2.txt  forms_3.txt
test_bulk_files/guides/: guides_1.txt  guides_2.txt  guides_3.txt
test_bulk_files/manuals/: manuals_1.txt  manuals_2.txt  manuals_3.txt
tests/: conftest.py  quick_test.py  test_authentication.py  test_auto_send.py  test_bulk_loading.py  test_enhanced_components.py  test_model_upgrade.py  test_network.py  test_russian_performance.py  test_startup.py
utils/: bulk_loader.py  diagnose_bot.py  drag_drop_loader.py  example_bulk_load.py  simple_bulk_loader.py  smart_faq_processor.py
(+2 files in other folders)
