[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faq-bot"
version = "2.0.0"
description = "Intelligent Telegram FAQ Bot with Semantic Search"
readme = "README.md"
authors = [
    {name = "@Conqueror133", email = "savvaskype@mail.ru"},
]
maintainers = [
    {name = "@Conqueror133", email = "savvaskype@mail.ru"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.2.0",
    "aiogram",
    "pandas",
    "openpyxl",
    "tkinterdnd2>=0.3.0",
    "python-dotenv>=0.19.0",
    "psutil>=5.8.0",
    "pytest>=7.0.0",
]
keywords = ["telegram", "bot", "faq", "semantic-search", "ai", "nlp"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/example/faq-bot"
Documentation = "https://github.com/example/faq-bot/blob/main/README.md"
Repository = "https://github.com/example/faq-bot.git"
"Bug Tracker" = "https://github.com/example/faq-bot/issues"

[project.scripts]
faq-bot = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.db"]